[gd_scene load_steps=6 format=2]

[ext_resource path="res://Arts/closedMouthFrog.png" type="Texture" id=1]
[ext_resource path="res://Arts/openMouthFrog.png" type="Texture" id=2]
[ext_resource path="res://Shop.gd" type="Script" id=3]
[ext_resource path="res://Arts/shopBG.png" type="Texture" id=4]
[ext_resource path="res://Arts/coinUp.png" type="Texture" id=5]

[node name="Shop" type="Node2D"]
script = ExtResource( 3 )

[node name="shopBG" type="Sprite" parent="."]
position = Vector2( 80.9595, 159.77 )
scale = Vector2( 0.83489, 0.859508 )
texture = ExtResource( 4 )

[node name="Pivot" type="Node2D" parent="."]
position = Vector2( 81.247, -17.0232 )

[node name="closedMouthFrog" type="Sprite" parent="Pivot"]
position = Vector2( 193.351, -8.06192 )
rotation = -1.5708
texture = ExtResource( 1 )

[node name="openMouthFrog" type="Sprite" parent="Pivot"]
visible = false
position = Vector2( 196.469, -8.84824 )
rotation = -1.5708
texture = ExtResource( 2 )

[node name="TongueTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Control" type="Control" parent="."]
margin_right = 163.0
margin_bottom = 325.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurrentCash" type="Label" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -7.0
margin_right = 20.0
margin_bottom = 7.0
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Item1" type="TextureButton" parent="."]
margin_left = 8.86322
margin_top = 248.305
margin_right = 40.8632
margin_bottom = 280.305
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cost" type="Label" parent="Item1"]
margin_top = -16.1659
margin_right = 40.0
margin_bottom = -2.16588

[node name="Item2" type="TextureButton" parent="."]
margin_left = 59.0787
margin_top = 261.848
margin_right = 91.0787
margin_bottom = 293.848
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cost" type="Label" parent="Item2"]
margin_top = -16.1659
margin_right = 40.0
margin_bottom = -2.16588

[node name="Item3" type="TextureButton" parent="."]
margin_left = 112.619
margin_top = 247.841
margin_right = 144.619
margin_bottom = 279.841
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cost" type="Label" parent="Item3"]
margin_top = -16.1659
margin_right = 40.0
margin_bottom = -2.16588
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 42.2267
margin_top = 114.075
margin_right = 122.227
margin_bottom = 134.075
text = "CONTINUE"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="TongueTimer" to="." method="_on_TongueTimer_timeout"]
[connection signal="pressed" from="Item1" to="." method="_on_Item1_pressed"]
[connection signal="pressed" from="Item2" to="." method="_on_Item2_pressed"]
[connection signal="pressed" from="Item3" to="." method="_on_Item3_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
